--- a/Lesson5/CMakeLists.txt
+++ b/Lesson5/CMakeLists.txt
@@ -4,7 +4,10 @@ project(use_phone_book)
 add_executable(use_phone_book use_phone_book.cpp)
 add_subdirectory(${PROJECT_SOURCE_DIR}/libpqxx)
 add_subdirectory(${PROJECT_SOURCE_DIR}/phone_book)
+add_subdirectory(${PROJECT_SOURCE_DIR}/user_interconnection)
 
 include_directories(${PROJECT_SOURCE_DIR}/phone_book)
+include_directories(${PROJECT_SOURCE_DIR}/user_interconnection)
 target_link_libraries(use_phone_book pqxx)
 target_link_libraries(use_phone_book phone_book)
+target_link_libraries(use_phone_book user_interconnection)
