--- a/Lesson6/Task2/WtdboTest2/WtdboTest2.vcxproj.filters
+++ b/Lesson6/Task2/WtdboTest2/WtdboTest2.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="WtdboTest.cpp">
+    <ClCompile Include="WtdboTest2.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
